--- a/index.html
+++ b/index.html
@@ -413,7 +413,9 @@ footer{
     do gemini já consegui realizar um layout criativo e chamativo que calcula a quantidade de calorias só com uma<br>
     simples foto do prato de comida, eu fiquei imaginando como seria mais preciso com um recurso do vision pro<br>
     uma barreira que encontrei a frente e é um leque para área da saúde, seria calcular medidas antropométrica<br>
-    para a pessoa acompanhar o ritimo de estética e avanço nos desafios de saúde e beleza<br>
+    para a pessoa acompanhar o ritimo de estética e avanço nos desafios de saúde e beleza.<br>
+      Essas medidas são importantes para avaliar o estado nutricional, o desenvolvimento físico, a<br>
+      composição corporal e mesmo para monitor o progresso em programas de exercios físicos.<br>
     porém, o recurso gratuito do gemini não deixou eu fazer isso. O Link para o site<br>
     da aplicação do site que calcula a estimativa do prato de comida é esse <a href="https://camillesecrets.github.io/App/">Clique aqui para ver</a> 
     .</h5>
