--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ footer{
         humano às novas e abrangentes tecnologias de<br>
         forma mais acessível e eficaz. A combinação de<br>
         tecnologia avançada com uma interface amigável e<br>
-        intuitiva pode facilitar a adoção e interação das<br>
+        intuitiva pode facilitar a adoção e interação<br>
         com essas ferramentas, prometendo uma<br>
         integração harmoniosa entre humanos e máquinas<br>
         no dia a dia.
@@ -411,12 +411,12 @@ footer{
     <h5 style="color: white;">Os projetos realizados e em teste, são uma simplificação de uso para pessoas comuns<br>
     da sociedade que não exploram a gama de recursos que a inteligência artificial tem, usando a versão gratuita<br>
     do gemini já consegui realizar um layout criativo e chamativo que calcula a quantidade de calorias só com uma<br>
-    simples foto do prato de comida, eu fiquei imaginando como seria mais preciso com um recurso do vision pro<br>
+    simples foto do prato de comida, eu fiquei imaginando como seria mais preciso com um recurso melhor<br>
     uma barreira que encontrei a frente e é um leque para área da saúde, seria calcular medidas antropométrica<br>
     para a pessoa acompanhar o ritimo de estética e avanço nos desafios de saúde e beleza.<br>
       Essas medidas são importantes para avaliar o estado nutricional, o desenvolvimento físico, a<br>
       composição corporal e mesmo para monitor o progresso em programas de exercios físicos.<br>
-    porém, o recurso gratuito do gemini não deixou eu fazer isso. O Link para o site<br>
+    Porém, o recurso gratuito do gemini não deixou eu fazer isso. O Link para o site<br>
     da aplicação do site que calcula a estimativa do prato de comida é esse <a href="https://camillesecrets.github.io/App/">Clique aqui para ver</a> 
     .</h5>
   </div>
