--- a/index.html
+++ b/index.html
@@ -414,8 +414,11 @@ footer{
       Isso parece meio que impossível, porém<br>
       pode ser bem eficiente e simples, o método que<br>
       eu vou usar. Como isso? Vocês me perguntariam,<br>
-      e eu diria por meio de de ADS(Publicidade).
-    </h4>
+      e eu diria por meio de de ADS(Publicidade). E eu<br>
+      não pretendo só gerar receita com ADS, mas um público<br>
+      alvo que requisite nossos serviços, vendendo aplicação<br>
+      integrado com as tecnologias do futuro.
+    </h4 
     <img src="assets/imagem/foto2.jpg" width="500" height="500" alt="Imagem com efeito" 
          class="fade-in-image2 image-2  img-fluid">
   </div>
