--- a/index.html
+++ b/index.html
@@ -345,32 +345,40 @@ footer{
   
         <p class="lead">Onde só é a Arché de um infinito de possibilidades</p>
 <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#infoModal">
-          Sobre a Startup
-      </button>
-         <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title text-center" id="modalTitle">Apresentação da Startup</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                  <div class="ratio ratio-16x9">
-                      <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?si=UF1_sceD7KYmB9OW" 
-                          title="YouTube video player" 
-                          frameborder="0" 
-                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                          referrerpolicy="strict-origin-when-cross-origin" 
-                          allowfullscreen>
-                      </iframe>
-                  </div>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-              </div>
-          </div>
-      </div>
-  </div>
+    Sobre a Startup
+</button>
+
+<!-- Vídeo de fundo -->
+<video class="video-background" autoplay muted loop>
+    <source src="seu-video.mp4" type="video/mp4">
+    Seu navegador não suporta vídeos em HTML5.
+</video>
+
+<!-- Modal -->
+<div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="cs" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-center" id="modalTitle">Apresentação da Startup</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?si=UF1_sceD7KYmB9OW" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
   
       </div>
     </div>
@@ -610,6 +618,8 @@ footer{
     document.getElementById("loader").classList.add("hidden");
   };
 </script>
+  <script>var myModal = new bootstrap.Modal(document.getElementById('cs'));
+myModal.show();</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
