--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
     }
 
     .video-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -2;
+   .video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* Faz com que o vídeo fique atrás de tudo */
+}
     }
 
     .overlay {
