--- a/index.html
+++ b/index.html
@@ -365,13 +365,11 @@ footer{
             </div>
             <div class="modal-body">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?si=UF1_sceD7KYmB9OW" 
-                        title="YouTube video player" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        referrerpolicy="strict-origin-when-cross-origin" 
-                        allowfullscreen>
-                    </iframe>
+                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+        sandbox="allow-scripts allow-same-origin allow-presentation"
+        allow="autoplay; encrypted-media"
+        frameborder="0">
+</iframe>
                 </div>
             </div>
             <div class="modal-footer">
