--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@ footer{
             </div>
             <div class="modal-body">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
-        sandbox="allow-scripts allow-same-origin allow-presentation"
+              <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+        referrerpolicy="origin"
         allow="autoplay; encrypted-media"
         frameborder="0">
 </iframe>
