--- a/index.html
+++ b/index.html
@@ -365,8 +365,7 @@ footer{
             </div>
             <div class="modal-body">
                 <div class="ratio ratio-16x9">
-              <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
-        referrerpolicy="origin"
+              <iframe src="https://www.youtube-nocookie.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
         allow="autoplay; encrypted-media"
         frameborder="0">
 </iframe>
