--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ footer{
         <h4>Aqui eu tento transparecer o começo da minha Startup</h4>
   
         <p class="lead">Onde só é a Arché de um infinito de possibilidades</p>
-   <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#infoModal">
+   <button type="button" class="btn btn-primary btn-lg" href="#contato">
         Sobre a Startup
     </button>
 
@@ -355,38 +355,8 @@ footer{
     Seu navegador não suporta vídeos em HTML5.
 </video>
 
-<!-- Modal -->
-<div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-center" id="modalTitle">Apresentação da Startup</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- Embedding o iframe dentro do modal -->
-                    <div class="ratio ratio-16x9">
-                        <iframe 
-                            src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0" 
-                            allow="autoplay; encrypted-media" 
-                            frameborder="0" 
-                            width="560" 
-                            height="315">
-                        </iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-            </div>
-        </div>
-    </div>
-</div>
+          
   
       </div>
     </div>
@@ -514,6 +484,14 @@ footer{
   <div style="margin-top: 20px;" class="d-flex align-items-center">
     <h1 class="text-white ms-3">icaro3677@gmail.com</h1>
 </div>
+    
+     <div style="text-aling=center;" class="ratio ratio-16x9">
+           <h1 class="text-white text-center">História da Startup</h1>
+                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+                    sandbox="allow-scripts allow-same-origin allow-presentation"
+                    allow="autoplay; encrypted-media"
+                    frameborder="0">
+            </iframe>
 </section>
 <footer>&copy; Copyright Camille Secrets 2025</footer>
 <script>
