--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ footer{
     
      <div style="text-aling=center;" class="ratio ratio-16x9">
            <h1 class="text-white text-center">História da Startup</h1>
-                    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
                     sandbox="allow-scripts allow-same-origin allow-presentation"
                     allow="autoplay; encrypted-media"
                     frameborder="0">
