--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@ footer{
                     allow="autoplay; encrypted-media"
                     frameborder="0">
             </iframe>
+     </div>
 </section>
 <footer>&copy; Copyright Camille Secrets 2025</footer>
 <script>
