--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ footer{
     <h1 class="text-white ms-3">icaro3677@gmail.com</h1>
 </div>
     
-     <div style="text-aling=center;" class="ratio ratio-16x9">
+     <div style="text-aling=center;">
            <h1 class="text-white text-center">História da Startup</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
                     sandbox="allow-scripts allow-same-origin allow-presentation"
