--- a/index.html
+++ b/index.html
@@ -486,12 +486,14 @@ footer{
 </div>
     
      <div style="text-aling=center;">
-           <h1 class="text-white text-center">História da Startup</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
-                    sandbox="allow-scripts allow-same-origin allow-presentation"
-                    allow="autoplay; encrypted-media"
-                    frameborder="0">
-            </iframe>
+           <h1 class="text-white text-center" style="margim-top:20px;">História da Startup</h1>
+                    <div class="ratio ratio-16x9" style="max-width: 560px; width: 100%; height: auto;">
+    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+            sandbox="allow-scripts allow-same-origin allow-presentation"
+            allow="autoplay; encrypted-media"
+            frameborder="0">
+    </iframe>
+</div>
      </div>
 </section>
 <footer>&copy; Copyright Camille Secrets 2025</footer>
