--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@ footer{
         <h4>Aqui eu tento transparecer o começo da minha Startup</h4>
   
         <p class="lead">Onde só é a Arché de um infinito de possibilidades</p>
-   <button type="button" class="btn btn-primary btn-lg" href="#contato">
-        Sobre a Startup
-    </button>
+   <a class="btn btn-primary btn-lg" href="#contato">
+    Sobre a Startup
+</a>
 
 <!-- Vídeo de fundo -->
 <video class="video-background" autoplay muted loop>
