Site Oficial da Camille Secrets

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ footer{
       alvo que requisite nossos serviços, vendendo aplicação<br>
       integrado com as tecnologias do futuro.
     </h4 
-    <img src="assets/imagem/foto2.jpg" width="500" height="500" alt="Imagem com efeito" 
+    <img src="assets/imagem/foto2.jpg" width="500" height="500" id="image2" alt="Imagem com efeito" 
          class="fade-in-image2 image-2  img-fluid">
   </div>
     </div>
