Site oficial da Camille Secrets

--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@ img {
             transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* Transição suave */
         }
 
-        .fade-in {
-            opacity: 1;
-            transform: translateX(0); /* Chega à posição final */
-        }
         .fade-in-image2 {
   opacity: 0;
   transform: translateX(100px); /* Começa deslocado para a direita */
   transition: opacity 2s ease-in-out, transform 2s ease-in-out;
+}
+
+.fade-in2 {
+  opacity: 1;
+  transform: translateX(0); /* Chega à posição final */
 }
 
 .fade-in2 {
@@ -405,8 +406,8 @@ footer{
       alvo que requisite nossos serviços, vendendo aplicação<br>
       integrado com as tecnologias do futuro.
     </h4 
-    <img src="assets/imagem/foto2.jpg" width="500" height="500" id="image2" alt="Imagem com efeito" 
-         class="fade-in-image2 image-2  img-fluid">
+    <img src="assets/imagem/foto2.jpg" width="500" height="500" alt="Imagem com efeito" 
+     class="fade-in-image2 image-2 img-fluid" id="image2">
   </div>
     </div>
 </section>
