--- a/index.html
+++ b/index.html
@@ -164,27 +164,55 @@ img {
     margin-top: 40px;
     display: inline-block;
   }
-  .fade-in-image {
-            opacity: 0;
-            transform: translateX(-100px); /* Começa deslocado para a esquerda */
-            transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* Transição suave */
-        }
-
-        .fade-in-image2 {
+.fade-in-image, .fade-in-image2 {
   opacity: 0;
+  transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* Transição suave */
+}
+
+.fade-in-image {
+  transform: translateX(-100px); /* Começa deslocado para a esquerda */
+}
+
+.fade-in-image2 {
   transform: translateX(100px); /* Começa deslocado para a direita */
-  transition: opacity 2s ease-in-out, transform 2s ease-in-out;
 }
 
-.fade-in2 {
+.fade-in, .fade-in2 {
   opacity: 1;
   transform: translateX(0); /* Chega à posição final */
 }
 
-.fade-in2 {
-  opacity: 1;
-  transform: translateX(0); /* Chega à posição final */
+.fade-in-image, .fade-in-image2 {
+  animation: fadeIn 2s forwards; /* Animação de entrada */
 }
+
+/* Definição da animação */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); /* Para a .fade-in-image */
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0); /* A posição final */
+  }
+}
+
+.fade-in-image2 {
+  animation: fadeIn2 2s forwards; /* Animação de entrada para .fade-in-image2 */
+}
+
+@keyframes fadeIn2 {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); /* Para a .fade-in-image2 */
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0); /* A posição final */
+  }
+}
+
 
   #proposta {
             display: flex;
