--- a/index.html
+++ b/index.html
@@ -166,54 +166,23 @@ img {
   }
 .fade-in-image, .fade-in-image2 {
   opacity: 0;
-  transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* Transição suave */
+  transition: opacity 2s ease-in-out, transform 2s ease-in-out;
 }
 
+/* Cada elemento começa de um lado */
 .fade-in-image {
-  transform: translateX(-100px); /* Começa deslocado para a esquerda */
+  transform: translateX(-100px); /* Esquerda */
 }
 
 .fade-in-image2 {
-  transform: translateX(100px); /* Começa deslocado para a direita */
+  transform: translateX(100px); /* Direita */
 }
 
+/* Classe ativada pelo IntersectionObserver */
 .fade-in, .fade-in2 {
   opacity: 1;
-  transform: translateX(0); /* Chega à posição final */
+  transform: translateX(0); /* Move para a posição final */
 }
-
-.fade-in-image, .fade-in-image2 {
-  animation: fadeIn 2s forwards; /* Animação de entrada */
-}
-
-/* Definição da animação */
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px); /* Para a .fade-in-image */
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0); /* A posição final */
-  }
-}
-
-.fade-in-image2 {
-  animation: fadeIn2 2s forwards; /* Animação de entrada para .fade-in-image2 */
-}
-
-@keyframes fadeIn2 {
-  0% {
-    opacity: 0;
-    transform: translateX(100px); /* Para a .fade-in-image2 */
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0); /* A posição final */
-  }
-}
-
-
   #proposta {
             display: flex;
             flex-direction: column;
@@ -591,11 +560,16 @@ footer{
   document.addEventListener("DOMContentLoaded", () => {
       const image = document.querySelector(".fade-in-image2");
 
+      if (!image) {
+          console.error("Erro: O elemento com a classe '.fade-in-image2' não foi encontrado.");
+          return;
+      }
+
       const observer = new IntersectionObserver((entries) => {
           entries.forEach(entry => {
               if (entry.isIntersecting) {
                   entry.target.classList.add("fade-in2");
-                  observer.unobserve(entry.target); // Remove a observação após ativar o efeito
+                  observer.unobserve(entry.target); // Para de observar após a ativação
               }
           });
       }, { threshold: 0.5 }); // 50% da imagem precisa estar visível para ativar
