Site ofical da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ footer{
 </script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-      const image = document.querySelector(".fade-in-image2");
+      const image2 = document.querySelector(".fade-in-image2");
 
       if (!image) {
           console.error("Erro: O elemento com a classe '.fade-in-image2' não foi encontrado.");
@@ -574,7 +574,7 @@ footer{
           });
       }, { threshold: 0.5 }); // 50% da imagem precisa estar visível para ativar
 
-      observer.observe(image);
+      observer.observe(image2);
   });
 </script>
 <script>
