Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@ footer{
       observer.observe(image);
   });
 </script>
+  <script>
 document.addEventListener("DOMContentLoaded", () => {
     const image2 = document.querySelector(".fade-in-image2");
 
@@ -575,7 +576,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     observer.observe(image2);
 });
-
+  </script>
 <script>
   const text = "Solucionando desafios<br>com a inteligência do futuro";
   const element = document.getElementById("typed-text");
