Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@ footer{
     da sociedade que não exploram a gama de recursos que a inteligência artificial tem, usando a versão gratuita<br>
     do gemini já consegui realizar um layout criativo e chamativo que calcula a quantidade de calorias aproximadamente  só com uma<br>
     simples foto do prato de comida, eu fiquei imaginando como seria mais preciso com um recurso melhor.<br>
-    O Link para o site da aplicação do site que calcula a estimativa do prato de comida é esse<br> <a href="https://camillesecrets.github.io/App/">Clique aqui para ver</a> 
-    . E uma outra aplicações que fácilitam o uso da I.A em outro projeto realizado de analisar sonhos o link é esse
-    <a href="https://camillesecrets.github.io/App2/">Click aqui para ver</a></h5>
+    O Link para o site da aplicação do site que calcula a estimativa do prato de comida é esse <a href="https://camillesecrets.github.io/App/">Clique aqui para ver</a> 
+    .<br> E uma outra aplicações que fácilitam o uso da I.A em outro projeto realizado de analisar sonhos o link é esse
+    <a href="https://camillesecrets.github.io/App2/">Clique aqui para ver</a></h5>
   </div>
   <div class="text-center">
     <img src="assets/imagem/analise.png" style="margin-top: 0px;" class="verificado">
