Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta property="og:title" content="Camille Secrets">
-  <meta property="og:description" content="Esta é a págin da Startup Camille Secrets">
+  <meta property="og:description" content="Esta é a página da Startup Camille Secrets">
   <meta property="og:image" content="https://camillesecrets.github.io/Camille-Secrets/assets/imagem/CamilleSecrets.jpg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
