Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -307,39 +307,41 @@ footer{
     <img src="assets/imagem/loader.gif" class="img-fluid" alt="Loading..." />
   </div>
   <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/imagem/navbar.png" class="img-fluid" height="50px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link"  href="#home">Início</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#proposta">Proposta</a>
-          </li>
-           <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="dropdownDemonstration" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Demonstração
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="assets/imagem/navbar.png" class="img-fluid" height="50px">
     </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownDemonstration">
-      <li><a class="dropdown-item" href="https://camillesecrets.github.io/App2/">Interpretador de sonho</a></li>
-      <li><a class="dropdown-item" href="https://camillesecrets.github.io/App/">Contador de calorias</a></li>
-      <li><a class="dropdown-item" href="#demonstracao">Especificações de Demonstração</a></li>
-    </ul>
-  </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#equipe">Equipe</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contato">Contatos</a>
-          </li>
-        </ul>
-      </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#home">Início</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#proposta">Proposta</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdownDemonstration" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Demonstração
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownDemonstration">
+            <li><a class="dropdown-item" href="https://camillesecrets.github.io/App2/">Interpretador de sonho</a></li>
+            <li><a class="dropdown-item" href="https://camillesecrets.github.io/App/">Contador de calorias</a></li>
+            <li><a class="dropdown-item" href="#demonstracao">Especificações de Demonstração</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#equipe">Equipe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contato">Contatos</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <section id="home" class="section"> 
     <div class="d-flex justify-content-start align-self-start">
