Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       text-aling:right;
       background-color: #4CB5E4;
       color: white;
+        margin-left: auto; /* Faz o alinhamento para a direita */
     }
 
     .nav-link {
