--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       padding: 0;
       overflow-x: hidden;
         }
+    .navbar-nav {
+  margin-left: auto !important;  /* Usa a margem automática à esquerda */
+}
 
     .typing-container {
       display: flex;
