--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ footer{
   <div class="loader-container" id="loader">
     <img src="assets/imagem/loader.gif" class="img-fluid" alt="Loading..." />
   </div>
- <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
-  <div class="container">
+<nav class="navbar navbar-expand-lg fixed-top custom-navbar">
+  <div class="container-fluid"> <!-- Alterado para container-fluid -->
     <a class="navbar-brand" href="#">
       <img src="assets/imagem/navbar.png" class="img-fluid" height="50px">
     </a>
@@ -322,7 +322,7 @@ footer{
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto" style="text-aling:right;"> <!-- ms-auto para alinhar à direita -->
         <li class="nav-item">
           <a class="nav-link" href="#home">Início</a>
         </li>
