Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ footer{
           <ul class="dropdown-menu" aria-labelledby="dropdownDemonstration">
             <li><a class="dropdown-item" href="https://camillesecrets.github.io/App2/">Interpretador de sonho</a></li>
             <li><a class="dropdown-item" href="https://camillesecrets.github.io/App/">Contador de calorias</a></li>
-            <li><a class="dropdown-item" href="#demonstracao">Especificações de Demonstração</a></li>
+            <li><a class="dropdown-item" href="#demostracao">Especificações de Demonstração</a></li>
           </ul>
         </li>
         <li class="nav-item">
