Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@ footer{
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto" style="text-aling:right;"> <!-- ms-auto para alinhar à direita -->
+<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+  <ul class="navbar-nav" style="text-aling:right;"> <!-- ms-auto para alinhar à direita -->
         <li class="nav-item">
           <a class="nav-link" href="#home">Início</a>
         </li>
