--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ footer{
       <span class="navbar-toggler-icon"></span>
     </button>
 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-  <ul class="navbar-nav" style="text-aling:right;"> <!-- ms-auto para alinhar à direita -->
+  <ul class="navbar-nav ms-auto text-end" style="text-aling:right;"> <!-- ms-auto para alinhar à direita -->
         <li class="nav-item">
           <a class="nav-link" href="#home">Início</a>
         </li>
