Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@ footer{
     background: #4CB5E4; /* Caso precise de um fundo */
     padding: 10px; /* Espaçamento interno */
   }
+        .navbar-nav {
+    max-height: 300px; /* Define um tamanho máximo para a lista do menu */
+    overflow-y: auto; /* Adiciona rolagem se o conteúdo for maior */
+  }
+
 }
   </style>
 </head>
