Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@ footer{
   }
     @media (max-width: 991px) { /* Aplica apenas para telas menores que lg */
   .navbar-collapse {
+        width: 60%; /* Define um tamanho menor */
     max-height: 300px; /* Defina o tamanho desejado */
     overflow-y: auto; /* Permite rolagem caso o conteúdo ultrapasse o tamanho */
     background: #4CB5E4; /* Caso precise de um fundo */
