Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@ footer{
     @media (max-width: 991px) { /* Aplica apenas para telas menores que lg */
   .navbar-collapse {
     position: absolute;
-    width: 100%; /* Garante que o menu ocupa apenas a largura necessária */
+        top: 100%; /* Garante que o menu apareça abaixo do botão toggle */
+    width: 50%; /* Garante que o menu ocupa apenas a largura necessária */
     max-height: 500px; /* Defina o tamanho desejado */
     overflow-y: auto; /* Permite rolagem caso o conteúdo ultrapasse o tamanho */
     background: #4CB5E4; /* Caso precise de um fundo */
