Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@ footer{
   .navbar-collapse {
     position: absolute;
         top: 100%; /* Garante que o menu apareça abaixo do botão toggle */
-    width: 50%; /* Garante que o menu ocupa apenas a largura necessária */
+    width: 40%; /* Garante que o menu ocupa apenas a largura necessária */
+    text-aling: right;
     max-height: 500px; /* Defina o tamanho desejado */
     overflow-y: auto; /* Permite rolagem caso o conteúdo ultrapasse o tamanho */
     background: #4CB5E4; /* Caso precise de um fundo */
