Site oficial da Startup Camille Secrets

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ footer{
       Isso parece meio que impossível, porém<br>
       pode ser bem eficiente e simples, o método que<br>
       eu vou usar. Como isso? Vocês me perguntariam,<br>
-      e eu diria por meio de de ADS(Publicidade). E eu<br>
+      e eu diria por meio de ADS(Publicidade). E eu<br>
       não pretendo só gerar receita com ADS, mas um público<br>
       alvo que requisite nossos serviços, vendendo aplicação<br>
       integrado com as tecnologias do futuro.
@@ -467,12 +467,12 @@ footer{
     do gemini já consegui realizar um layout criativo e chamativo que calcula a quantidade de calorias aproximadamente  só com uma<br>
     simples foto do prato de comida, eu fiquei imaginando como seria mais preciso com um recurso melhor.<br>
     O Link para o site da aplicação do site que calcula a estimativa do prato de comida é esse <a href="https://camillesecrets.github.io/App/">Clique aqui para ver</a> 
-    .<br> E uma outra aplicações que fácilitam o uso da I.A em outro projeto realizado de analisar sonhos o link é esse
-    <a href="https://camillesecrets.github.io/App2/">Clique aqui para ver</a></h5>
+    .<br> E uma outra aplicações que facilitam o uso da I.A em outro projeto realizado de analisar sonhos o link é esse
+    <a href="https://camillesecrets.github.io/App2/">Clique aqui para ver</a>.</h5>
   </div>
   <div class="text-center">
     <img src="assets/imagem/analise.png" style="margin-top: 0px;" class="verificado">
-    <h1 style="color: white; margin-top: 20px; display: inline-block;">Rercusos a serem explorados pela nossa Startup</h1>
+    <h1 style="color: white; margin-top: 20px; display: inline-block;">Recursos a serem explorados pela nossa Startup</h1>
   </div>
   <div class="text-center">
     
