--- a/index.html
+++ b/index.html
@@ -509,13 +509,13 @@ footer{
       <h1 class="text-white ms-3">Contado com a Startup</h1>
   </div>
   <div style="margin-top: 20px;" class="d-flex align-items-center">
-    <h1 class="text-white ms-3">icaro3677@gmail.com</h1>
+    <h1 class="text-white ms-3">Camille-Secrets@gmail.com</h1>
 </div>
     
      <div style="text-aling=center;">
            <h1 class="text-white text-center" style="margim-top:50px;">História da Startup</h1>
                     <div class="ratio ratio-16x9" style="max-width: 560px; width: 100%; height: auto;">
-    <iframe src="https://www.youtube.com/embed/sIaJwmzJoHM?modestbranding=1&rel=0"
+    <iframe src="https://www.youtube.com/embed/sIaJswmzJoHM?modestbranding=1&rel=0"
             sandbox="allow-scripts allow-same-origin allow-presentation"
             allow="autoplay; encrypted-media"
             frameborder="0">
