--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ footer{
       <h3 id="typed-text" class="typing"></h3>
     </div> 
   
-    <video class="video-background" autoplay muted loop>
+    <video class="video-background" autoplay muted loop playsinline webkit-playsinline>
       <source src="assets/imagem/bg.mp4" type="video/mp4">
       Seu navegador não suporta vídeos HTML5.
     </video>
@@ -643,3 +643,4 @@ document.addEventListener("DOMContentLoaded", () => {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
