--- a/index.html
+++ b/index.html
@@ -324,6 +324,80 @@ footer{
   .navbar-nav {
     text-align: right; /* Alinha os itens do menu à direita */
   }}
+
+   /* ======== CONTAINER DO VÍDEO ======== */
+    .video-container {
+      position: relative;
+      width: 100%;
+      max-width: 420px;       /* largura máxima (como um short de celular) */
+      aspect-ratio: 9 / 16;   /* formato vertical */
+      overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    }
+
+    /* ======== VÍDEO ======== */
+    .video-camile {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;      /* cobre todo o container */
+      border-radius: 16px;
+      cursor: pointer;
+    }
+
+    /* ======== BOTÃO DE PLAY ======== */
+    .play-btn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 48px;
+      color: white;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(4px);
+    }
+
+    .play-btn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translate(-50%, -50%) scale(1.1);
+    }
+
+    .hidden {
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+    }
+
+    /* ======== RESPONSIVIDADE ======== */
+    @media (max-width: 768px) {
+      .video-container {
+        max-width: 100%;
+        border-radius: 0;
+      }
+
+      .play-btn {
+        width: 60px;
+        height: 60px;
+        font-size: 36px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .play-btn {
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -515,15 +589,44 @@ footer{
      <div style="text-aling=center;">
            <h1 class="text-white text-center" style="margim-top:50px;">História da Startup</h1>
                     <div class="ratio ratio-16x9" style="max-width: 560px; width: 100%; height: auto;">
-    <iframe src="https://www.youtube.com/embed/sIaJswmzJoHM?modestbranding=1&rel=0"
-            sandbox="allow-scripts allow-same-origin allow-presentation"
-            allow="autoplay; encrypted-media"
-            frameborder="0">
-    </iframe>
+     <div class="video-container">
+    <video class="video-camile" id="camilleVideo" muted loop playsinline webkit-playsinline>
+      <source src="assets/imagem/Camille.mp4" type="video/mp4">
+      Seu navegador não suporta vídeos HTML5.
+    </video>
+
+    <button class="play-btn" id="playButton">▶️</button>
+  </div>
+                      
 </div>
      </div>
 </section>
 <footer>&copy; Copyright Camille Secrets 2025</footer>
+    <script>
+    const video = document.getElementById('camilleVideo');
+    const playButton = document.getElementById('playButton');
+
+    playButton.addEventListener('click', () => {
+      if (video.paused) {
+        video.play();
+        playButton.classList.add('hidden');
+      } else {
+        video.pause();
+        playButton.classList.remove('hidden');
+      }
+    });
+
+    video.addEventListener('click', () => {
+      if (!video.paused) {
+        video.pause();
+        playButton.classList.remove('hidden');
+      }
+    });
+
+    video.addEventListener('play', () => {
+      playButton.classList.add('hidden');
+    });
+  </script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
       const navLinks = document.querySelectorAll(".nav-link");
@@ -643,4 +746,5 @@ document.addEventListener("DOMContentLoaded", () => {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
