--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ footer{
            <h1 class="text-white text-center" style="margim-top:50px;">História da Startup</h1>
                     <div class="ratio ratio-16x9" style="max-width: 560px; width: 100%; height: auto;">
      <div class="video-container">
-    <video class="video-camile" id="camillleVideo" muted loop playsinline webkit-playsinline>
+    <video class="video-camile" id="camilleVideo" muted loop playsinline webkit-playsinline>
       <source src="assets/imagem/Camillle.mp4" type="video/mp4">
       Seu navegador não suporta vídeos HTML5.
     </video>
@@ -746,6 +746,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
